# sentinel

./: .gitignore  README.md  pyproject.toml  sentinel.toml
.github/workflows/: ci.yml
reports/: backtest.txt  scan.json
src/sentinel/: backtest.py  main.py  scan.py  web.py  webapp.py
src/sentinel.egg-info/: PKG-INFO  SOURCES.txt
src/sentinel/core/: backtest.py  config.py  exchange.py  filters.py  indicators.py  io.py  mathutils.py  ohlcv.py  regime.py  report.py  risk.py  setups.py  structure.py
src/sentinel/ui/: presets.py  schemas.py  service.py
src/sentinel/ui/static/: app.js  styles.css
src/sentinel/ui/templates/: index.html
tests/: test_backtest_smoke.py  test_regime.py  test_risk.py  test_scan_cli.py  test_smoke.py
